--- a/mortgage-guide.html
+++ b/mortgage-guide.html
@@ -2,17 +2,28 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>2026 房贷利率市场化与配置建议 - FinanceHub</title>
+    <title>2026 中国房贷市场白皮书：还款模型与税务抵扣策略 - FinanceHub</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-50 p-8 text-slate-800">
-    <div class="max-w-3xl mx-auto bg-white p-10 rounded-3xl shadow-sm">
-        <a href="/" class="text-blue-600 font-bold mb-6 inline-block">← 返回主页</a>
-        <h1 class="text-3xl font-black mb-6">中国家庭资产配置：房贷利率市场化下的新思路</h1>
-        <div class="prose prose-slate space-y-4">
-            <p>2026 年，LPR 利率机制进一步完善。对于购房者而言，选择等额本息还是等额本金，需要结合长期的通胀预期进行评估。</p>
-            <h2 class="text-xl font-bold mt-6">提前还贷的逻辑分析</h2>
-            <p>利用我们的房贷计算工具，您可以清晰地看到利息支出的分布。在利率下行周期中，优化债务结构是家庭理财的关键一步。</p>
+<body class="bg-slate-50 p-8 text-slate-800 font-sans">
+    <div class="max-w-4xl mx-auto bg-white p-12 rounded-3xl shadow-xl border border-slate-100">
+        <a href="/" class="text-blue-600 font-bold mb-8 inline-block">← 返回主页</a>
+        <h1 class="text-3xl font-black mb-8">中国家庭资产负债表优化：2026 房贷利率市场化全解析</h1>
+        
+        <div class="space-y-6 leading-loose text-slate-700">
+            <h3 class="text-xl font-bold text-slate-900">1. LPR 报价机制的深层变动</h3>
+            <p>2026 年，个人住房贷款利率与 LPR 的加点系数进入了动态调整期。对于存量房贷用户，如何选择重定价周期（1个月或1年）成为了资产管理的关键。通过本站的等额本息计算器，您可以直观感受利率下调 10 个基点对总利息支出的具体影响。</p>
+
+            <h3 class="text-xl font-bold text-slate-900">2. 等额本息 vs 等额本金：数学模型的博弈</h3>
+            <p>许多购房者误认为等额本金总能“省钱”，但忽略了资金的时间价值（TVM）。在通胀预期存在的 2026 年，前期较高的月供压力可能会挤压个税抵扣后的家庭现金流净值。利用 FinanceHub 的房贷终端，建议用户根据未来三年的收入预期进行现金流压力测试。</p>
+
+            <div class="p-8 bg-slate-900 text-white rounded-3xl my-8">
+                <p class="font-mono text-sm opacity-70 mb-4">// 计算公式参考：</p>
+                <p class="text-lg font-bold">月供 = [贷款本金 × 月利率 × (1+月利率)^还款月数] ÷ [(1+月利率)^还款月数 - 1]</p>
+            </div>
+
+            <h3 class="text-xl font-bold text-slate-900">3. 个税抵扣与住房贷款的协同效应</h3>
+            <p>在 2026 年个税新规下，住房贷款利息专项附加扣除标准有所优化。将个税计算器与房贷计算器结合使用，可以计算出家庭的最优节税方案，从而最大化提升可支配收入水平。</p>
         </div>
     </div>
 </body>
