--- a/currency-trends.html
+++ b/currency-trends.html
@@ -2,17 +2,30 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>2026 全球汇率趋势深度解析 - FinanceHub</title>
+    <title>2026 全球汇率波动与离岸资产对冲报告 - FinanceHub</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-50 p-8 text-slate-800">
-    <div class="max-w-3xl mx-auto bg-white p-10 rounded-3xl shadow-sm">
-        <a href="/" class="text-blue-600 font-bold mb-6 inline-block">← 返回主页</a>
-        <h1 class="text-3xl font-black mb-6">2026 全球货币体系的波动与机会</h1>
-        <div class="prose prose-slate space-y-4">
-            <p>在 2026 年，全球汇率市场进入了高波动周期。随着美联储货币政策的转向和新兴市场经济的复苏，主要货币对（如 USD/CNY, EUR/USD）表现出了显著的差异性。</p>
-            <h2 class="text-xl font-bold mt-6">数字货币对传统汇率的影响</h2>
-            <p>央行数字货币（CBDC）的广泛应用正在改变跨境支付的效率。我们的实时汇率转换器已同步全球各大银行的最优报价，确保用户在进行资产对冲时获得最精准的数据支持。</p>
+<body class="bg-slate-50 p-8 text-slate-800 font-serif">
+    <div class="max-w-4xl mx-auto bg-white p-12 rounded-3xl shadow-xl">
+        <a href="/" class="text-blue-600 font-bold mb-8 inline-block hover:underline">← 返回计算终端</a>
+        <h1 class="text-4xl font-black mb-8 leading-tight">2026 全球货币体系重构：后高利率时代的汇率对冲策略</h1>
+        
+        <div class="prose prose-blue lg:prose-lg max-w-none space-y-6 text-slate-700 leading-relaxed">
+            <p class="text-xl text-slate-500 italic border-l-4 border-blue-500 pl-4">摘要：随着 2026 年全球通胀进入目标区间，主要经济体的货币政策开始出现显著分化。本文将深度剖析 USD/CNY 与 EUR/USD 的波动逻辑，并为个人投资者提供科学的资产对冲建议。</p>
+
+            <h2 class="text-2xl font-bold text-slate-900 mt-10">一、2026年美联储政策转向与美元走势展望</h2>
+            <p>进入 2026 年，美联储的缩表进程基本告一段落。尽管基准利率维持在历史相对高位，但市场对流动性释放的预期正在增强。这种“高利率、低增长”的局面导致美元指数（DXY）在高位呈现宽幅震荡态势。</p>
+
+            <h2 class="text-2xl font-bold text-slate-900 mt-10">二、离岸人民币（CNH）与跨境套利空间分析</h2>
+            <p>对于中国投资者而言，2026 年的人民币汇率更多受到经常项下资本流动的驱动。通过我们的实时汇率转换器可以观察到，离岸与在岸价差在收窄。投资者应密切关注进出口数据与 LPR 利率的联动效应，利用汇率波动锁定海外采购成本。</p>
+
+            <h2 class="text-2xl font-bold text-slate-900 mt-10">三、避险资产：数字货币与黄金的汇率溢价</h2>
+            <p>在宏观不确定性增加的背景下，数字黄金（BTC）与传统实物金表现出了高度的相关性。计算资产溢价时，必须考虑实时汇率的摩擦系数。我们的终端通过 Open Exchange API 提供秒级更新，旨在降低投资者的汇兑损耗。</p>
+
+            <div class="bg-blue-50 p-6 rounded-2xl mt-12">
+                <h4 class="font-bold text-blue-800 mb-2">专家建议：</h4>
+                <p class="text-sm text-blue-700">建议在汇率波动超过 200 个基点时分批进行换汇操作。 FinanceHub 2026 的转换工具支持多币种联动，可作为您决策的重要参考数据。</p>
+            </div>
         </div>
     </div>
 </body>
