--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <footer class="bg-white border-t py-10 text-center">
         <div class="text-sm font-bold text-slate-400 space-x-6 mb-4">
             <a href="/privacy-policy.html" class="hover:text-blue-600 transition">Privacy Policy (隐私政策)</a>
-            <a href="#" class="hover:text-blue-600 transition">Disclaimer</a>
+            <a href="/disclaimer.html" class="hover:text-blue-600 transition">Disclaimer</a>
         </div>
         <p class="text-[10px] text-slate-300">© 2026 FinanceHub Pro. Market data provided by Open Exchange API.</p>
     </footer>
